Added some links

--- a/website.html
+++ b/website.html
@@ -26,13 +26,13 @@
                 <div class="resources-dropdown">
                     <p class="resources">Resources</p>
                     <dl class="dl1">
-                        <dt><a href="">eCommerce Blog</a></dt>
-                        <dt><a href="">Photography Blog</a></dt>
-                        <dt><a href="">Wix Fit Blog</a></dt>
-                        <dt><a href="">Wix Restaurants Blog</a></dt>
-                        <dt><a href="">Wix Encyclopedia</a></dt>
-                        <dt><a href="">Wix Learn</a></dt>
-                        <dt><a href="">Wix SEO Learning Hub</a></dt>
+                        <dt><a href="https://www.wix.com/blog/ecommerce">eCommerce Blog</a></dt>
+                        <dt><a href="https://www.wix.com/blog/photography">Photography Blog</a></dt>
+                        <dt><a href="https://www.wix.com/blog/fitness">Wix Fit Blog</a></dt>
+                        <dt><a href="https://www.wix.com/blog/restaurants">Wix Restaurants Blog</a></dt>
+                        <dt><a href="https://www.wix.com/encyclopedia">Wix Encyclopedia</a></dt>
+                        <dt><a href="https://www.wix.com/learn">Wix Learn</a></dt>
+                        <dt><a href="https://www.wix.com/seo/learn">Wix SEO Learning Hub</a></dt>
                     </dl>
                 </div>
                 
